Fixed file miss match and "dumbed down" the code in order to focus on backend development.